--- a/.github/workflows/deploy_main.yaml
+++ b/.github/workflows/deploy_main.yaml
@@ -3,7 +3,7 @@ name: Build and Deploy
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build:
@@ -21,7 +21,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/diplom:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/market:latest
 
   deploy:
     needs: build
@@ -40,7 +40,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           source: "deploy/*"
-          target: "diplom"
+          target: "market"
           strip_components: 1
       - name: Run compose
         uses: appleboy/ssh-action@master
@@ -49,7 +49,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           script: |
-            cd diplom
+            cd market
             docker-compose pull
             docker-compose up -d
       - name: Cleanup After deploy
