--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -23,6 +23,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    ports:
+      - "8000:8000"
     restart: always
 
 
