--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ envparse = "^0.2.0"
 psycopg2-binary = "^2.9.6"
 gunicorn = "^20.1.0"
 djangorestframework = "^3.14.0"
+django-filter = "^23.2"
+drf-spectacular = "^0.26.2"
+pytest = "^7.3.1"
+pytest-factoryboy = "^2.5.1"
+pytest-django = "^4.5.2"
 
 
 [tool.poetry.group.dev.dependencies]
